fixed landing page on mobile

--- a/src/screens/Landing/styles.css
+++ b/src/screens/Landing/styles.css
@@ -76,6 +76,6 @@
   }
 
   #landing-jumbo-wrapper {
-    margin: 300px 20px;
+    margin: 370px 20px 0px 20px;
   }
 }
